tests/baselines/reference/errorHandlingInInstanceOf.errors.txt
errorHandlingInInstanceOf.ts(1,5): error TS2304: Cannot find name 'x'.
errorHandlingInInstanceOf.ts(5,18): error TS2304: Cannot find name 'UnknownType'.


==== errorHandlingInInstanceOf.ts (2 errors) ====
    if (x instanceof String) {
        ~
!!! error TS2304: Cannot find name 'x'.
    }
    
    var y: any;
    if (y instanceof UnknownType) {
                     ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'UnknownType'.
    }